node2-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: node2
spec:
  type: NodePort
  ports:
  - name: "26656"
    port: 26656
    targetPort: 26656
    nodePort: 30010
  - name: "26657"
    port: 26657
    targetPort: 26657
    nodePort: 30011 # pylonscli query account cosmos1em8z0zk8ekjhx9asnlg20x35wcm52xjr9u26qw --node tcp://$(minikube ip):30011
  clusterIP: 10.107.138.4
  selector:
    app: node2
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node2
spec:
  selector:
    matchLabels:
      app: node2
  serviceName: node2
  replicas: 1
  template:
    metadata:
      labels:
        app: node2
    spec:
      containers:
      - image: pylons_node
        imagePullPolicy: Never
        name: node2
        resources: {}
        volumeMounts:
          - mountPath: /root/.pylonsd/config/config.toml
            subPath: config.toml
            name: all-secret-keys
            readOnly: true
          - mountPath: /root/.pylonsd/config/genesis.json
            subPath: genesis.json
            name: genesis
            readOnly: true
          - mountPath: /root/.pylonsd/config/node_key.json
            subPath: node_key.json
            name: all-secret-keys
            readOnly: true
          - mountPath: /root/.pylonsd/config/priv_validator_key.json
            subPath: priv_validator_key.json
            name: all-secret-keys
            readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: all-secret-keys
          secret:
            secretName: node2-all-keys
            items:
              - key: config.toml
                path: config.toml
              - key: node_key.json
                path: node_key.json
              - key: priv_validator_key.json
                path: priv_validator_key.json
        - name: genesis
          configMap:
            name: genesis
            items:
              - key: genesis.json
                path: genesis.json
  volumeClaimTemplates:
  - metadata:
      name: node-config-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Gi
status:
  replicas: 1
