node2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.prod-like.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: node2
  name: node2
spec:
  ports:
  - name: "26656"
    port: 26656
    targetPort: 26656
  - name: "26657"
    port: 26657
    targetPort: 26657
  selector:
    io.kompose.service: node2
status:
  loadBalancer: {}
